# django-capstone

./: README.md  example.env  my.cnf  pyproject.toml
djangoProject/: settings.py  urls.py
littlelemon/: asgi.py  settings.py  urls.py  wsgi.py
restaurant/: admin.py  models.py  serializers.py  urls.py  views.py
restaurant/migrations/: 0001_initial.py  0002_alter_booking_options_alter_menu_options.py  0003_alter_booking_booking_date.py
restaurant/tests/: test_models.py  test_views.py
templates/: index.html
